--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,11 @@
     <string name="language">Language</string>
     <string name="change_language">Change Language</string>
 
+    <!--Empty States-->
+    <string name="empty_state_title_no_conn">No internet connection</string>
+    <string name="empty_state_title_no_favorite_item">No favorites yet.</string>
+    <string name="empty_state_desc_no_favorite_item_movie">You don\'t have a list of favorite movies</string>
+    <string name="empty_state_desc_no_favorite_item_tvshow">You don\'t have a list of favorite tv show</string>
+
 
 </resources>
